<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakcapp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Numerador2"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hintNumerador"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Denominador2"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/hintDenominador"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Numerador1"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/hintNumerador"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Denominador1"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="308dp"
        android:ems="10"
        android:hint="@string/hintDenominador"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="443dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/sum"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="383dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/sub"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="268dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="193dp"
        android:layout_height="158dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="109dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ifmg" />

</android.support.constraint.ConstraintLayout>